# eg

./: .gitignore  .gitmodules  README.md  _config.yml  bug_tracker.txt  installation.xml  notepad++.xml  run_wizard.bat  wizard.xml
api/clang_plugin/: clang_plugin.hpp
api/database/: database.hpp
api/eg/: allocator.hpp  backtrace.hpp  basic_scheduler.cpp  clock.cpp  clock.hpp  common.hpp  coroutine.hpp  default_traits.hpp  event.hpp  event_log.cpp  include.hpp  iterators.hpp  macros.hpp  operations.hpp  resource.cpp  resource.hpp  scheduler.hpp  variant.hpp
api/eg_compiler/: allocator.hpp  concrete.hpp  derivation.hpp  eg.hpp  identifiers.hpp  input.hpp  instruction.hpp  interface.hpp  invocation.hpp  layout.hpp  link.hpp  objects.hpp  translation_unit.hpp
api/eg_runtime/: eg_runtime.hpp
api/eventlog/: eventlog_api.hpp
api/parser/: parser.hpp
cmake/: CMakeLists.txt  boost_include.cmake  clang_include.cmake  common_include.cmake  gtest_include.cmake  indicators_include.cmake  pybind11_include.cmake  spdlog_include.cmake  xsde_include.cmake
cmake/clang_plugin/: CMakeLists.txt
cmake/common/: CMakeLists.txt  common_include.cmake
cmake/commonlib/: CMakeLists.txt
cmake/database/: CMakeLists.txt  eg_sources_include.cmake
cmake/driver/: CMakeLists.txt
cmake/eg/: CMakeLists.txt  eg_include.cmake
cmake/eg_runtime/: CMakeLists.txt  eg_runtime_include.cmake
cmake/eventlog/: CMakeLists.txt  eventlog_include.cmake
cmake/eventlog_cmd/: CMakeLists.txt
cmake/eventlog_module/: CMakeLists.txt
cmake/generators/: CMakeLists.txt
cmake/generators/basic/: CMakeLists.txt
cmake/generators/cinder/: CMakeLists.txt
cmake/generators/dynamic/: CMakeLists.txt
cmake/generators/python/: CMakeLists.txt
cmake/generators/static/: CMakeLists.txt
cmake/generators/test/: CMakeLists.txt
cmake/hosts/: CMakeLists.txt
cmake/hosts/basic/: CMakeLists.txt
cmake/hosts/cinder/: CMakeLists.txt
cmake/hosts/test/: CMakeLists.txt
cmake/innosetup/: CMakeLists.txt
cmake/parser/: CMakeLists.txt
cmake/pyeg/: CMakeLists.txt
cmake/pyeg_dll/: CMakeLists.txt
cmake/schema/: CMakeLists.txt  schema_include.cmake
cmake/tests/: CMakeLists.txt
cmake/tests/unittests/: CMakeLists.txt
docs/: _config.yml  actions.md  default.html  dimensions.md  documentation.html  helloworld.md  index.html  index.md
examples/circles/: .eg  circles.eg  circles.py  waves.eg
examples/input/: .eg  input.eg  main.eg
examples/wizard/: .eg  examples.hpp  imgui.ini  wizard.eg
reference/: make.sh  runTests.sh
reference/source/: conf.py  contexts.rst  gettingStarted.rst  index.rst  license.rst
runtime/: .clang-format  basic_host.xml  cinder_host.xml  cinder_include.hpp  default_config.xml  eg.hpp  eg_common.hpp  eg_coroutine.hpp  eg_default_traits.hpp  eg_event.hpp  eg_include.hpp  eg_iterators.hpp  eg_operations.hpp  eg_result_type.hpp  eg_scheduler.hpp  eg_type_path.hpp  eg_variant.hpp  fake_event_log.hpp  frame.hpp  host_clock.hpp  host_event_log.hpp  py_eg_reference.cpp  py_eg_reference.hpp  pyeg.py  test_host.xml
src/clang_plugin/: clang_plugin.cpp  clang_utils.cpp  clang_utils.hpp
src/common/: .eg  assert_verify.hpp  backtrace.cpp  backtrace.hpp  clang_warnings.hpp  escape.cpp  escape.hpp  file.cpp  file.hpp  require_semicolon.hpp  tick.hpp
src/database/: abstract.cpp  abstract.hpp  clang_utils.cpp  clang_utils.hpp  codegen.cpp  codegen.hpp  concrete.cpp  database.cpp  derivation.cpp  derivation.hpp  eg.hpp  identifiers.cpp  identifiers.hpp  implementation_session.cpp  implementation_session.hpp  input.cpp  input.hpp  interface_session.cpp  interface_session.hpp  objects.cpp  objects.hpp  old.oldcpp  operations_session.cpp  operations_session.hpp  parser.cpp  parser_session.cpp  parser_session.hpp  session.hpp
src/driver/: command_build.cpp  command_clean.cpp  command_create.cpp  command_doc.cpp  command_info.cpp  command_log.cpp  command_run.cpp  config.cpp  config.hpp  environment_string.cpp  environment_string.hpp  log.hpp  main.cpp  project.cpp  project.hpp  schema-pimpl.cxx  schema-pimpl.hxx  schema-pskel.cxx  schema-pskel.hxx  schema-simpl.cxx  schema-simpl.hxx  schema-sskel.cxx  schema-sskel.hxx  schema.cxx  schema.hxx  schema.xsd  unittest_parser.cpp  unittest_parser.hpp
src/eg/: abstract.cpp  abstract.hpp  allocator.cpp  codegen.cpp  codegen.hpp  codegen_includes.cpp  codegen_interface.cpp  codegen_operations.cpp  codegen_runtime.cpp  concrete.cpp  concrete.hpp  derivation.cpp  derivation.hpp  eg.cpp  eg.hpp  identifiers.cpp  identifiers.hpp  implementation_session.cpp  implementation_session.hpp  input.cpp  input.hpp  instruction.cpp  instruction.hpp  interface.cpp  interface.hpp  interface_session.cpp  interface_session.hpp  invocation.cpp  invocation.hpp  layout.cpp  layout.hpp  link.cpp  name_resolution.cpp  name_resolution.hpp  objects.cpp  objects.hpp  old.oldcpp  operations_session.cpp  operations_session.hpp  parser_session.cpp  (+4 more)
src/eg_runtime/: eg_runtime.cpp
src/eventlog/: client.cpp  client.hpp  event.hpp  event_log_module.cpp  file.cpp  file.hpp  iterator.cpp  iterator.hpp  log.cpp  log.hpp  pid.cpp  pid.hpp  server.cpp  server.hpp  sharedMemory.cpp  sharedMemory.hpp
src/eventlog_cmd/: main.cpp
src/generators/: generators.cpp  generators.hpp
src/hosts/: py_eg_reference.hpp  py_glm.hpp  python_codegen.cpp
src/innosetup/: eginstaller.iss  main.cpp  postinstall_info.txt  preinstall_info.txt
src/io/: archive.hpp  indexed_object.cpp  indexed_object.hpp  loader.cpp  loader.hpp  storer.cpp  storer.hpp
src/parser/: parser.cpp
src/pyeg/: main.cpp  py_eg_reference.cpp  py_eg_reference.hpp  py_glm.hpp  pyeg.cpp  python_include.hpp  runtime.cpp  runtime.hpp
src/schema/: .eg  eg_schema.xsd  example.xml  installation_schema.xsd  main.cpp  project.cpp  project.hpp  schema-pimpl.cxx  schema-pimpl.hxx  schema-pskel.cxx  schema-pskel.hxx  schema-simpl.cxx  schema-simpl.hxx  schema-sskel.cxx  schema-sskel.hxx  schema.cxx  schema.hxx  schema.xsd  wizard_schema.xsd
tests/basic/: basic_derive_up.eg  basic_enum.xml  basic_event.eg  basic_inherit.eg  basic_poly.eg  (+26 more)
(+370 files in other folders)
